# netflix_recommender

./: README.md  pyproject.toml
backend/: pyproject.toml  server.py
backend/ml_models/: auth.py  data_exploration.py
backend/ml_models/vector_db/: embedding_utils.py  models.py  operations.py  populate_db.py
backend/source/: app.py
backend/source/vector_db/: embedding_utils.py  models.py  operations.py  populate_db.py
client/: main.py  pyproject.toml
client/utils/: api.py
ml_models/: data_exploration.py
